# vTeam

./: .gitignore  AGENTIC_COMPONENT_ANALYSIS.md  CHANGELOG.md  CONSOLIDATION_RESULTS.md  CONTRIBUTING.md  CRC_CLEANUP.md  EXECUTIVE_BRIEFING_AGENTIC.md  MIGRATION_COMPLETE.md  Makefile  PLUGIN_INTERFACE_PLAN.md  PR_328_META_ANALYSIS.md  PR_DESCRIPTION.md  README.md  SECURITY_REVIEW_RESPONSE.md  TESTING_SUMMARY.md  codecov.yml  good_first_issue_candidates.json
.claude/commands/: breakdown-feature.md
.github/workflows/: frontend-lint.yml  go-lint.yml  python-test.yml  rfe-builder-tests.yml  test-local-dev.yml
components/backend/: go.mod
components/backend/handlers/: github_auth.go  helpers_test.go  middleware.go
components/frontend/: .env.example  .env.production  .npmrc  Dockerfile  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
components/manifests/: deploy.sh
components/manifests/minikube/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  local-dev-rbac.yaml  operator-deployment.yaml
components/manifests/rbac/: backend-clusterrole.yaml
components/runners/claude-code-runner/: Dockerfile  pyproject.toml
components/runners/claude-code-runner/tests/: conftest.py
components/scripts/local-dev/: README.md  crc-restart-frontend.sh
demos/rfe-builder/: Dockerfile  deployment.yml
demos/rfe-builder/.streamlit/: secrets.toml
demos/rfe-builder/ai_models/: activity_tracker.py  cost_tracker.py  prompt_manager.py
demos/rfe-builder/plugins/: __init__.py  (+2 more)
docs/: LOCAL_DEVELOPMENT.md
tests/: local-dev-test.sh
(+45 files in other folders)
