[project]
name = "claude-code-runner"
version = "0.1.0"
description = "Runner that streams via Claude Code SDK and syncs workspace via PVC proxy"
readme = "CLAUDE.md"
requires-python = ">=3.11"
authors = [
  { name = "vTeam" }
]
dependencies = [
  "requests>=2.31.0",
  "aiohttp>=3.8.0",
  "pyjwt>=2.8.0",
  "anthropic[vertex]>=0.68.0",
  "claude-agent-sdk>=0.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

